# bigdata-thematic-screener

./: .coveragerc  .dockerignore  .gitignore  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  DEMO_MODE.md  Dockerfile  FINAL_FIX_SUMMARY.md  FRONTEND_QUICKSTART.md  FRONTEND_REDESIGN_SUMMARY.md  HORIZONTAL_FORM_REDESIGN.md  LICENSE  Makefile  README.md  REFINEMENTS_SUMMARY.md  TESTING_CHECKLIST.md  TEST_REPORT.md  fly.toml  pyproject.toml  test_config_flow.html  test_form_submission.html  test_frontend_functionality.html
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  fly.yml  test.yml
bigdata_thematic_screener/: __init__.py  __main__.py  models.py  service.py  settings.py  traces.py
bigdata_thematic_screener/api/: app.py  examples.py  models.py  secure.py  sql_models.py  storage.py  utils.py
bigdata_thematic_screener/static/data/: dict.txt  example_ai_automation.json  example_climate_tech.json  example_supply_chain.json
bigdata_thematic_screener/static/scripts/: company_cards.js  config_panel.js  dashboard_cards.js  evidence_table.js  form.js  heatmap.js  load_example.js  mindmap.js  report_renderer.js  tab_controller.js  validators.js  visualization.js
bigdata_thematic_screener/templates/: __init__.py
bigdata_thematic_screener/templates/api/: base.html.jinja  frontend.html.jinja  index.html.jinja  main_frontend.html.jinja
docs/: frontend.md  test_frontend.md
tests/: conftest.py  test_app.py  test_models.py  test_service.py  test_traces.py
tests/test_api/: test_models.py  test_secure.py
