[project]
name = "bigdata_thematic_screener"
version = "2.1.0"
description = "Discover corporate exposure to any theme or event, grounded on thousands of sources provided by Bigdata.com"
authors = [{name = "jaldana", email = "jaldana@ravenpack.com"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.2.1",
    "jinja2==3.1.6",
    "structlog>=25.4.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "bigdata-client==2.19.0",
    "bigdata-research-tools==0.20.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bigdata_thematic_screener"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
